codemp/julia/generated/game/NPC.jl

CorpsePhysics( self_ ) = ccall((:CorpsePhysics, lib), Void, ( Ptr{gentity_t},  ), self_ );
NPC_RemoveBody( self_ ) = ccall((:NPC_RemoveBody, lib), Void, ( Ptr{gentity_t},  ), self_ );
BodyRemovalPadTime( ent_ ) = ccall((:BodyRemovalPadTime, lib), Int32, ( Ptr{gentity_t},  ), ent_ );
NPC_RemoveBodyEffect() = ccall((:NPC_RemoveBodyEffect, lib), Void, (),  );
pitch_roll_for_slope( forwhom_, pass_slope_ ) = ccall((:pitch_roll_for_slope, lib), Void, ( Ptr{gentity_t}, vec3_t,  ), forwhom_, pass_slope_ );
DeadThink() = ccall((:DeadThink, lib), Void, (),  );
SetNPCGlobals( ent_ ) = ccall((:SetNPCGlobals, lib), Void, ( Ptr{gentity_t},  ), ent_ );
SaveNPCGlobals() = ccall((:SaveNPCGlobals, lib), Void, (),  );
RestoreNPCGlobals() = ccall((:RestoreNPCGlobals, lib), Void, (),  );
ClearNPCGlobals() = ccall((:ClearNPCGlobals, lib), Void, (),  );
NPC_ShowDebugInfo() = ccall((:NPC_ShowDebugInfo, lib), Void, (),  );
NPC_ApplyScriptFlags() = ccall((:NPC_ApplyScriptFlags, lib), Void, (),  );
NPC_HandleAIFlags() = ccall((:NPC_HandleAIFlags, lib), Void, (),  );
NPC_AvoidWallsAndCliffs() = ccall((:NPC_AvoidWallsAndCliffs, lib), Void, (),  );
NPC_CheckAttackScript() = ccall((:NPC_CheckAttackScript, lib), Void, (),  );
NPC_CheckAttackHold() = ccall((:NPC_CheckAttackHold, lib), Void, (),  );
NPC_KeepCurrentFacing() = ccall((:NPC_KeepCurrentFacing, lib), Void, (),  );
NPC_BehaviorSet_Charmed( bState_ ) = ccall((:NPC_BehaviorSet_Charmed, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Default( bState_ ) = ccall((:NPC_BehaviorSet_Default, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Interrogator( bState_ ) = ccall((:NPC_BehaviorSet_Interrogator, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_ImperialProbe( bState_ ) = ccall((:NPC_BehaviorSet_ImperialProbe, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Seeker( bState_ ) = ccall((:NPC_BehaviorSet_Seeker, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Remote( bState_ ) = ccall((:NPC_BehaviorSet_Remote, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Sentry( bState_ ) = ccall((:NPC_BehaviorSet_Sentry, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Grenadier( bState_ ) = ccall((:NPC_BehaviorSet_Grenadier, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Sniper( bState_ ) = ccall((:NPC_BehaviorSet_Sniper, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Stormtrooper( bState_ ) = ccall((:NPC_BehaviorSet_Stormtrooper, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Jedi( bState_ ) = ccall((:NPC_BehaviorSet_Jedi, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Droid( bState_ ) = ccall((:NPC_BehaviorSet_Droid, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Mark1( bState_ ) = ccall((:NPC_BehaviorSet_Mark1, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Mark2( bState_ ) = ccall((:NPC_BehaviorSet_Mark2, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_ATST( bState_ ) = ccall((:NPC_BehaviorSet_ATST, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_MineMonster( bState_ ) = ccall((:NPC_BehaviorSet_MineMonster, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Howler( bState_ ) = ccall((:NPC_BehaviorSet_Howler, lib), Void, ( Int32,  ), bState_ );
NPC_BehaviorSet_Rancor( bState_ ) = ccall((:NPC_BehaviorSet_Rancor, lib), Void, ( Int32,  ), bState_ );
NPC_RunBehavior( team_, bState_ ) = ccall((:NPC_RunBehavior, lib), Void, ( Int32, Int32,  ), team_, bState_ );
NPC_ExecuteBState( self_ ) = ccall((:NPC_ExecuteBState, lib), Void, ( Ptr{gentity_t},  ), self_ );
NPC_CheckInSolid() = ccall((:NPC_CheckInSolid, lib), Void, (),  );
G_DroidSounds( self_ ) = ccall((:G_DroidSounds, lib), Void, ( Ptr{gentity_t},  ), self_ );
NPC_Think( self_ ) = ccall((:NPC_Think, lib), Void, ( Ptr{gentity_t},  ), self_ );
NPC_InitAI() = ccall((:NPC_InitAI, lib), Void, (),  );
NPC_InitGame() = ccall((:NPC_InitGame, lib), Void, (),  );
NPC_SetAnim( ent_, setAnimParts_, anim_, setAnimFlags_ ) = ccall((:NPC_SetAnim, lib), Void, ( Ptr{gentity_t}, Int32, Int32, Int32,  ), ent_, setAnimParts_, anim_, setAnimFlags_ );
